Update proyect UX

--- a/proyectos.html
+++ b/proyectos.html
@@ -41,6 +41,90 @@
 
         <section class="DCU">
             <div>
+                <h2>Healthy Food App, implementing the UX User Experience phases</h2>
+                <p>                               
+                    Design of a mobile app focused on promoting healthy eating habits, allowing users to access recipes, create personalized meal plans, and generate shopping lists.
+                    <br>
+                    My Role:  UX Designer: Responsible for user research, low and high fidelity prototyping, and usability testing.
+                    <br><br>Technologies and Tools:
+                    <br>Figma: Design of high fidelity interactive prototypes. 
+                    <br>Link to interact
+                     <a href="https://www.figma.com/proto/amoZDVxXggANskhjgBNyn8/App-Healthy-Food?node-id=1-3&p=f&t=xCpN36htz9WtZGl9-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A3" style="color: orange; target="_blank">with figma and visualize the behavior:</a>.
+                    <br>Diagramming Tools: Jamboard and Miro to create affinity diagrams and organize ideas.
+                    <br>Google Forms/Sheets: Collection and analysis of user data.
+                    <br><br>Key Results:
+                    <br>Creation of an intuitive interface based on real user data.
+                    <br>Functional prototype with optimized navigation and positive feedback in usability tests.
+                    <br>Increased empathy towards users by designing solutions based on their real needs.
+                    <br><br>Skills Developed:
+                    <br>User research and data synthesis.
+                    <br>Creation of user flows, page wireframes, and interactive prototypes.
+                    <br>Effective communication of findings and design to stakeholders.
+                </p>
+            </div>
+            <div class="contener_carrusel">
+                <div id="carouselExampleIndicators" class="carousel slide">
+
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                            aria-label="Slide 5"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                            aria-label="Slide 6"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+                            aria-label="Slide 1"></button>
+                    </div>
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./image/UX/App1.jpg" class="d-block w-100" alt="Empaque2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/UX/App2.jpg" class="d-block w-100" alt="Empaque">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/UX/figma.png" class="d-block w-100" alt="Manual">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/UX/general.png" class="d-block w-100" alt="Manual">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/UX/Pirmer Plano.png" class="d-block w-100" alt="Manual">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/UX/Stu1.PNG" class="d-block w-100" alt="Manual">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/UX/Stu2.PNG" class="d-block w-100" alt="Manual">
+                        </div>
+                    </div>
+
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+
+            
+        </section>
+
+        <section class="DCU">
+            <div>
                 <h2>Development of DCU Door Control Module CTEP 2023</h2>
                 <p>CTEP (Continental Talent Entry Program):
                     Development of DCU applying V-Cycle, ASPICE, Software Development Life Cycle, using Scrum and Kanban frameworks.
@@ -333,12 +417,18 @@
         </section>
 
 
-        <section>
+        <section class="DCU">
             <div>
-                <h2>Sistemas SCADA para detencion de nivel en 2 tanques mediante algoritmos Discriminante y Kmeans</h2>
+                <h2>SCADA systems for level detection in 2 tanks using Discriminant and Kmeans algorithms</h2>
             </div>
             <div>
-                <h3>Investigacion y desarrollado en PDF</h3>
+                <h3>Research documented in PDF</h3>
+                <p>
+                    For this practice we will implement the App Designer and Simulink tools, both from Matlab software. These tools will allow us to simulate the behavior of
+                     a SCADA system that aims to monitor the behavior of a system of two interconnected tanks designed previously. This system has an extended state observer.
+                     The signals are measured directly from the linearized model. This system will have 6 types of analysis. The first 3 refer to the use of the interface 
+                     and the last 3 are oriented to the analysis of event detection based on clustering-Discriminant Function data modeling.
+                </p>
             </div>
             <div class="container">
                 <embed
